two small fixes
- guide scroll bar was too close to the divider, so I added a left margin to the divider.
- While dragging the divider you could accidentally highlight navbar text if you went too high up so I made it unselectable.

--- a/css/main.css
+++ b/css/main.css
@@ -155,6 +155,7 @@ kbd {
 	top: 0;
 	left: 0;
 	z-index: 1;/*Lets topbar render ontop of iframe*/
+	user-select: none;
 }
 
 .spectateBanner::before{
@@ -429,6 +430,7 @@ h1{
 	cursor: ew-resize;
 	height: 100%;
 	padding: 2px;
+	margin-left: 0.5em; /* To put space between scroll bar of main panel and this bar to avoid accidental scrolling. */
 }
 .mainPanel{
 	min-width: 10%;
